--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -1,5 +1,5 @@
 <p id="notice"><%= notice %></p>
-
+<div class = "div-conteudo">
 <div class="avatar">
   <% if @profile %>
   <%= image_tag @profile.avatar.url(:medium) %>
@@ -45,3 +45,4 @@
 </div>
 <%end%>
 <% end %>
+</div>
