--- a/app/views/profiles/index.html.erb
+++ b/app/views/profiles/index.html.erb
@@ -13,11 +13,9 @@
 </p>
 
 <h3 class="fonte-bacana">Biografia</h3>
-<div class="div-bio">
-  <span>
-    <%= @profile.try(:bio) %>
-  </span>
-</div>
+<span class="div-bio">
+  <%= @profile.try(:bio) %>
+</span>
 
 <p>
   <h3 class="fonte-bacana">Minhas habilidades são:</h3>
